# http/handler_p2p.go
@@ -256,11 +256,7 @@ func (h *p2pHandler) ListP2PDocuments(rw http.ResponseWriter, req *http.Request)
 func (h *p2pHandler) SyncDocuments(rw http.ResponseWriter, req *http.Request) {
 	db := mustGetContextClientDB(req)
 
-	var reqBody struct {
-		CollectionName string   `json:"collectionName"`
-		DocIDs         []string `json:"docIDs"`
-		Timeout        string   `json:"timeout"`
-	}
+	var reqBody SyncDocumentsParams
 
 	if err := requestJSON(req, &reqBody); err != nil {
 		responseJSON(rw, http.StatusBadRequest, errorResponse{err})
@@ -280,6 +276,14 @@ func (h *p2pHandler) SyncDocuments(rw http.ResponseWriter, req *http.Request) {
 	}
 
 	opts := options.WithIdentity(options.SyncDocuments(), identity.FromContext(ctx))
+	if reqBody.BlockSyncTimeout != "" {
+		blockSyncTimeout, err := time.ParseDuration(reqBody.BlockSyncTimeout)
+		if err != nil {
+			responseJSON(rw, http.StatusBadRequest, errorResponse{err})
+			return
+		}
+		opts = opts.SetBlockSyncTimeout(blockSyncTimeout)
+	}
 	err := db.SyncDocuments(ctx, reqBody.CollectionName, reqBody.DocIDs, opts)
 	if err != nil {
 		responseJSON(rw, http.StatusInternalServerError, errorResponse{err})
@@ -539,14 +543,12 @@ func (h *p2pHandler) bindRoutes(router *Router) {
 	deletePeerDocuments.Responses.Set("200", successResponse)
 	deletePeerDocuments.Responses.Set("400", errorResponse)
 
-	syncDocumentsRequestSchema := openapi3.NewObjectSchema().
-		WithProperty("collectionName", openapi3.NewStringSchema()).
-		WithProperty("docIDs", openapi3.NewArraySchema().WithItems(openapi3.NewStringSchema())).
-		WithProperty("timeout", openapi3.NewStringSchema())
-
+	syncDocumentsParamsSchema := &openapi3.SchemaRef{
+		Ref: "#/components/schemas/sync_documents_params",
+	}
 	syncDocumentsRequest := openapi3.NewRequestBody().
 		WithRequired(true).
-		WithContent(openapi3.NewContentWithJSONSchema(syncDocumentsRequestSchema))
+		WithContent(openapi3.NewContentWithJSONSchemaRef(syncDocumentsParamsSchema))
 
 	syncDocumentsResponse := openapi3.NewResponse().
 		WithDescription("Document sync completed successfully")
